--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "naive-ui": "^2.39.0",
     "postcss": "^8.4.39",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "tailwindcss": "^3.4.6",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vfonts": "^0.0.3"
   }
 }
